fix: Safari align bug

--- a/assets/css/lightbox.scss
+++ b/assets/css/lightbox.scss
@@ -1,5 +1,5 @@
 .lightbox-thumbnail {
-  vertical-align: top;
+
 }
 
 .lightbox-thumbnail > img {
